--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/josa42/coc-sh.git"
   },
   "engines": {
-    "coc": "^0.0.82",
+    "coc": "^0.0.83-next.24",
     "node": ">=16"
   },
   "keywords": [
